# gpp

./: .gitmodules  CMakeLists.txt  test.cppm
src/core/: core.cppm  test.cppm
src/core/logger/: logger.cpp  logger.cppm
src/core/types/: types.cppm
tests/scratch/: main.cpp
